GNOME Bugzilla – Bug 701713
vpn-manager: fix PropertiesChanged on NMVpnConnection
Last modified: 2013-06-10 13:36:06 UTC
fixes the applet-doesn't-notice-when-vpn-connect-succeeds bug in master
Created attachment 246149 [details] [review] vpn-manager: fix PropertiesChanged on NMVpnConnection We need to register NMVpnConnection's properties with the PropertiesChanged signal (which it inherits from NMActiveConnection) or it will ignore them.
(In reply to comment #1) > Created an attachment (id=246149) [details] [review] > vpn-manager: fix PropertiesChanged on NMVpnConnection > > We need to register NMVpnConnection's properties with the > PropertiesChanged signal (which it inherits from NMActiveConnection) > or it will ignore them. Looks good.
Attachment 246149 [details] pushed as 8feb387 - vpn-manager: fix PropertiesChanged on NMVpnConnection